--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
         <section class="services"id="services">
-            <h2 class="heading">Our<span>Services</span></h2>
+            <h2 class="heading">Our<span>EXPERIENCE</span></h2>
 
             <div class="services-container">
                 <div class="services-box">
