--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>RESPONSIVE PERSONAL PORTFOLIO WEBSITE </title>
+        <title>BHARKAVI'S PORTFOLIO </title>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
@@ -16,7 +16,7 @@
             <nav class="navbar">
                 <a href="#home" class="active">Home</a>
                 <a href="#about">ABOUT</a>
-                <a href="#services">EXPERIENCE</a>
+                <a href="#experience">WORK EXPERIENCE</a>
                 <a href="#portfolio">PERSONAL PROJECTS</a>
                 <a href="#contact">CONTACT</a>
             </nav>
@@ -49,8 +49,8 @@
                  <a href="#"class="btn">Read More</a>   
             </div>
         </section>
-        <section class="services"id="services">
-            <h2 class="heading">Our<span>EXPERIENCE</span></h2>
+        <section class="experience"id="experience">
+            <h2 class="heading">WORK<span>EXPERIENCE</span></h2>
 
             <div class="services-container">
                 <div class="services-box">
