--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div class="home-content">
                 <h3>Hello, My name is </h3>
-                <h1>Bharkavi</h1>
+                <h1>Bharkavi S</h1>
                 <h3>And I'm a <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/bsachithanandam/bsachithanandam.github.io"><i class='bx bxl-github'></i></a>
