--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
-        <div style="background-image: url('myproject/image/Home.JPG'); background-size: cover; height:80rem; padding-top:80px;">
+        <div style="background-image: url('myproject/image/Home.jpg'); background-size: cover; height:80rem; padding-top:80px;">
         <section class="home" id="home">
             
             <div class="home-content">
