--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
-        <div style="background-image: url('myproject/image/Home.jpg'); background-size: cover; height:80rem; padding-top:80px;">
+        <div style="background-image: url('myproject/image/Home.jpg'); background-size: cover; box-shadow: inset 0 0 0 1000px rgba(25,55,109,1); height:80rem; padding-top:80px;">
         <section class="home" id="home">
             
             <div class="home-content">
@@ -55,7 +55,7 @@
             <div class="services-container">
                 <div class="services-box">
                     <i class='bx bx-code-alt'></i>
-                    <h3>Web Development</h3>
+                    <h3>Software Development Intern - Qualcomm Inc, San Deigo, CA</h3>
                     <p>Motivated designer and developer
                          with experience creating custom websites through PHP and CSS. 
                          Strong collaboration skills and proven history of application development. DHTML and JavaScript. MS Access and MySQL.</p>
