--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
-        <div style="background-image: url('myproject/image/Home.jpg'); background-size: cover; opacity: 0.3;height:80rem; padding-top:80px;">
+        <div style="background-image: url('myproject/image/Home.jpg'); background-size: cover; opacity: 0.6 ;height:80rem; padding-top:80px;">
         <section class="home" id="home">
             
             <div class="home-content">
                 <h3>Hello, My name is </h3>
-                <h1>Bharkavi S</h1>
+                <h1>Bharkavi Sachithanandam</h1>
                 <h3>And I'm a <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/bsachithanandam/bsachithanandam.github.io"><i class='bx bxl-github'></i></a>
