--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
                 <p>Even as a child, computers always fascinated me and I grew along with the growth of technology. This pushed me to complete my Bachelors in Computer Science and Engineering from Anna University, India. I worked as Software Engineer where I developed and tested Advanced Driving Assitance System(ADAS) Software for Automotive. I am now doing my Masters in Computer Science, specialising in Machine Learning from San Jose State University. I love beaches and also love to read Thriller Novels!! </p>
             </div>
         </section>
-        
+
+        <section class="skills" id="skills">
+            <div class="skills-content">
+                <h2 class="heading">Skills</h2>
+                <h3>Programming Languages</h3>
+                <div class="skills-buttons">
+                    <h4><i class="fa-brands fa-python fa-flip"></i> Python </h4>
+                    <h4><i class="fa-sharp fa-regular fa-square-terminal fa-flip"></i>C++</h4>
+                </div>
+            </div>
+        </section>
         <section class="experience"id="experience">
             <h2 class="heading">WORK<span>EXPERIENCE</span></h2>
 
