--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <input type="submit" value="Send Message"class="btn">
             </form>
             <span id="msg"></span>-->
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSck2fvnoC4yCCibPhKcN6nI3TgvoGFZOCMWbsEPUb0eQU1sJg/viewform?embedded=true" style="display: block" width="750" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSck2fvnoC4yCCibPhKcN6nI3TgvoGFZOCMWbsEPUb0eQU1sJg/viewform?embedded=true" style="display: block" width="750" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </section>
 
         <footer class="footer">
@@ -228,6 +228,28 @@
             </div>
         </footer>
 
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="script.js"></script>
+        <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbzFPVGxI-75Ilkm2z_EMuI9ubPlp8-7dQmMzzdPiIunLPPzj3bcY1ohMdT_DfZ3zPwhTA/exec'
+            const form = document.forms['submit-to-google-sheet']
+            const msg=document.getElementById("msg")
+          
+            form.addEventListener('submit', e => {
+              e.preventDefault()
+              fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => {
+                    msg.innerHTML="Message sent successfully"
+                    setTimeout(function(){
+                        msg.innerHTML=""
+                    },5000)
+                    form.reset()
+                })
+                .catch(error => console.error('Error!', error.message))
+            })
+          </script>
         
     </body>
 </html>
