--- a/index.html
+++ b/index.html
@@ -225,6 +225,21 @@
             </div>
         </div>
 
+        <div class="card">
+            <img src="myproject/image/twitter_senti.jpeg" alt="Avatar">
+            <div class="container">
+                <h4>Heart Disease detection using Machine Learning Techniques</h4>
+                <div class="container-elements">
+                    <a href="#" class="cont-btn">Python</a>
+                    <a href="#" class="cont-btn">Logistic Regression</a>
+                    <a href="#" class="cont-btn">Random Forest</a>
+                    <a href="#"class="cont-btn"><i class='bx bx-link-external' ></i></a>
+                </div>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+        </div>
+
 
            <!-- 
             <div class="portfolio-container">
